[package]
name = "node-compression-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.7"
test-log = { version = "0.2.15", default_features = false, features = [
  "trace",
] }
anyhow = "1.0"
exitcode = "1.1.2"
bitstream-io = "2.4.2"
byteorder = "1.3"
diffs = "0.5"
fixedbitset = "0.4"

# This needs to be 0.14 to avoid an issue with blake2.
rand = "0.8"
rand_chacha = "0.3"
roaring = "0.10"
thinp = { git = "https://github.com/jthornber/thin-provisioning-tools.git", branch = "main" }
thiserror = "1.0"
threadpool = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.13"
num_enum = "0.7.2"
safemem = "0.3.3"
tempfile = "3.10"
